[gd_scene load_steps=6 format=3 uid="uid://c533q8qqsm22c"]

[ext_resource type="Script" uid="uid://dv4csp75pw1xr" path="res://main_menu/table_row.gd" id="1_8tmnv"]
[ext_resource type="Theme" uid="uid://cp8q24ofw3yfc" path="res://fonts/default_font_theme.tres" id="2_dw000"]
[ext_resource type="FontFile" uid="uid://j3iubyclikcu" path="res://fonts/Romanica.ttf" id="3_805rm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8tmnv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dw000"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[node name="PanelContainer" type="PanelContainer"]
offset_left = 15.0
offset_right = 15.0
offset_bottom = 23.0
size_flags_horizontal = 3
focus_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_8tmnv")
script = ExtResource("1_8tmnv")
style_normal = SubResource("StyleBoxEmpty_8tmnv")
style_focus = SubResource("StyleBoxFlat_dw000")

[node name="TableRow" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="SeedLabel" type="Label" parent="TableRow"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("2_dw000")
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighScoreLabel" type="Label" parent="TableRow"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("3_805rm")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimeLabel" type="Label" parent="TableRow"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("3_805rm")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
